<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="ExtraTranslation">Buck It</string>
    <string name="tapped_event">Like This Event?</string>
    <string name="save_event">Save for later</string>
    <string name="schedule_event">Buck it now</string>
    <string name="holiday_cal">Holidays in United States</string>
    <string name="logo_description">Logo of application</string>
    <string name="interest">Because you expressed interest in</string>
    <string name="google_maps_api_key">AIzaSyCgppKjKEpuscDM2_DzrjBPL0OdltG2CJQ</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="event_title_heading">For</string>
    <string name="add_location"></string>
    <string name="invitees_bolded_prompt">With</string>
    <string name="invite_someone">do you want to see?</string>
    <string name="recent_button">Recent Button</string>
    <string name="location_bolded_prompt">At</string>
    <string name="add_location_prompt">add a location</string>
    <string name="add_name_prompt">add event name</string>
    <string name="time_bolded_prompt">On</string>
    <string name="add_time">do you want to meet?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Beamlak Ashenafi</string>
    <string name="nav_header_subtitle">I came, I saw, I conquered</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_friends_button">Add Friends</string>
    <string name="recent_friends">Recents</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="scheduler_title">Make a Plan</string>
    <string name="warning">Please fill out all fields</string>
    <string name="add_to_cal">Add To Calendar</string>
    <string name="added_to_cal">Added To Calendar</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thur">Thur</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="select_days">Select Days</string>
    <string name="select_times">Select Times</string>
    <string name="select_duration">Select Duration</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="send_invite">Send Invite</string>

    <string name="pending_invites">Pending Invites</string>
    <string name="events_coming_up">Events Coming Up</string>
    <string name="accept">ACCEPT</string>
    <string name="decline">DECLINE</string>
    <string name="select_meet_time">Here is when you\'re both free</string>
    <string name="between">Between</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="all_optins">See All Options</string>
    <string name="select_time">Select Time</string>
    <string name="meet_on">meet on</string>

    <string name="add_friends">Add Friends</string>

    <string name="radius_description">How far are you willing to go for events?</string>
    <string name="distance_hint">Set distance</string>
    <string name="category_select_question">Choose categories you want to explore</string>
    <string name="phone_question">Add phone number</string>
    <string name="almost_done">Almost done with registration!</string>
    <string name="almost_done_2">Please complete the following details to complete registration
    </string>
    <string name="finish_registration">Finish Registration</string>
    <string name="fcm_sender_id">293701218628</string>

    <string name="image_blur_description">Blur background</string>
    <string name="first_tab_description">Current Bucket</string>
    <string name="second_tab_description">Achieved Bucket</string>
    <string name="bucket_item_hint">What do you want to do?</string>
    <string name="achieved">Achieved</string>
    <string name="buck_it">Buck It!</string>
    <string name="date_format">MM/DD/YYYY</string>
    <string name="button_add_to_bucket_description">Add to Bucket</string>
    <string name="category_prompt">Choose A Category</string>
    <string name="noCurrentNotifications">No notifications to show</string>
    <string-array name="category_names">
        <item>Auto, Boat &amp; Air</item>
        <item>Film &amp; Media</item>
        <item>Food &amp; Drink</item>
        <item>Holiday</item>
        <item>Music</item>
        <item>Performing &amp; Visual Arts</item>
        <item>Sports &amp; Fitness</item>
        <item>Travel &amp; Outdoor</item>
        <item>Other</item>
    </string-array>
    <string-array name="distance_types">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string-array name="hour_options">
        <item>0 hours</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>

    </string-array>

    <string-array name="minute_options">
        <item>0 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
    </string-array>
</resources>
